force-app/main/default/objects/Account_Plan_Priorities__c/fields/Description_for_the_Priorities_of_the_Ke__c.field-meta.xml
<CustomField>
    <fullName>Description_for_the_Priorities_of_the_Ke__c</fullName>
    <label>Description for the Priorities of the Ke</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>