force-app/main/default/objects/Account_Plan_Priorities__c/fields/Imerys_Strategic__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Strategic__c</fullName>
    <label>Imerys Strategic</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>