force-app/main/default/objects/Account_Plan_Priorities__c/fields/List_Priorities_of_the_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>List_Priorities_of_the_Key_Account__c</fullName>
    <label>List Priorities of the Key Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>