force-app/main/default/objects/Account_Plan_Priorities__c/fields/Rating_for_Priorities_of_the_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Rating_for_Priorities_of_the_Key_Account__c</fullName>
    <label>Rating for Priorities of the Key Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>