force-app/main/default/objects/Account_Plan_Priorities__c/fields/Win_Win_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Win_Win_Partnership__c</fullName>
    <label>Win-Win Partnership</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>